--- a/index.html
+++ b/index.html
@@ -1,10 +1,70 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Keeper John Britania - Portfolio</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="bg-dark text-white text-center p-4">
+        <h1 class="animate__animated animate__fadeInDown">Keeper John Britania</h1>
+        <p class="animate__animated animate__fadeInUp">WordPress Developer</p>
+    </header>
+
+    <section id="about" class="container my-5">
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <img src="your-photo.jpg" alt="Your Photo" class="rounded-circle img-fluid animate__animated animate__zoomIn">
+            </div>
+            <div class="col-md-8">
+                <h2 class="animate__animated animate__fadeInRight">About Me</h2>
+                <p class="animate__animated animate__fadeInRight">I am a WordPress developer with over 5 years of experience in building responsive and dynamic websites. My skills include HTML, CSS, JavaScript, and various WordPress themes and plugins.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects" class="container my-5">
+        <h2 class="text-center animate__animated animate__fadeIn">Projects</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card animate__animated animate__fadeInLeft">
+                    <img src="project1.jpg" class="card-img-top" alt="Project 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 1</h5>
+                        <p class="card-text">Description of project 1.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card animate__animated animate__fadeInUp">
+                    <img src="project2.jpg" class="card-img-top" alt="Project 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 2</h5>
+                        <p class="card-text">Description of project 2.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card animate__animated animate__fadeInRight">
+                    <img src="project3.jpg" class="card-img-top" alt="Project 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 3</h5>
+                        <p class="card-text">Description of project 3.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-dark text-white text-center p-4">
+        <p class="mb-0">&copy; 2024 Keeper John Britania</p>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
