--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="container">
             <div class="infos">
                 <h6 class="subtitle">hello,I'm</h6>
-                <h6 class="title">James Smith</h6>
-                <p>UI/UX Designer</p>
+                <h6 class="title">Keeper John</h6>
+                <p>Web Developer/Automation Hero</p>
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">HIRE ME</button>
@@ -66,12 +66,12 @@
                 </div>
             </div>              
             <div class="img-holder">
-                <img src="assets/imgs/man.svg" alt="">
+                <img src="assets/imgs/person.png" alt="">
             </div>      
         </div>  
 
         <!-- Header-widget -->
-        <!-- <div class="widget">
+        <div class="widget">
             <div class="widget-item">
                 <h2>124</h2>
                 <p>Happy Clients</p>
@@ -84,7 +84,7 @@
                 <h2>789</h2>
                 <p>Awards Won</p>
             </div>
-        </div> -->
+        </div>
     </header>
     <!-- End of Page Header -->
     
