--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 
                 <div class="socials mt-4">
                     <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a>
+                    <a class="social-item" href="javascript:void(0)"><i class="ti-linkedin"></i></a>
                     <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a>
                 </div>
             </div>              
             <div class="img-holder">
@@ -96,10 +95,10 @@
                     <img src="assets/imgs/avatar-5.jpg" alt="" class="img-thumbnail mb-4">
                 </div>
                 <div class="pl-md-4 col-md-9">
-                    <h6 class="title">James Smith</h6>
-                    <p class="subtitle">UI/UX Designer</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, pariatur, aperiam aut autem voluptas odit. Odio ducimus delectus totam sed aliquam sequi praesentium mollitia, illum repudiandae quidem quod, magni magnam.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius, nam. Quo praesentium qui temporibus voluptatum, facilis aliquid eligendi fugiat beatae neque inventore non. Laborum repellendus consequatur ullam voluptatum asperiores.</p>
+                    <h6 class="title">Keeper John</h6>
+                    <p class="subtitle">Web Developer/Automation Hero</p>
+                    <p>Hello! I'm Keeper John Britania, a passionate and experienced web developer specializing in CMS development. Since 2018, I've been honing my skills in creating and managing websites using various Content Management Systems (CMS) including WordPress, HubSpot, ClickFunnels, GoHighLevel, and Shopify. With a strong foundation in web development, I have a proven track record of delivering high-quality, functional, and visually appealing websites that cater to the unique needs of my clients. My expertise extends beyond just building websites; I excel in email automation, ensuring seamless and efficient communication for businesses.</p>
+                    <p>One of the aspects I love most about my job is the ability to work remotely. Equipped with my trusty laptop, I have the freedom to work from anywhere, providing my clients with flexibility and timely solutions. I am passionate about what I do and continually strive to stay updated with the latest industry trends and technologies. My commitment to excellence and my love for web development drive me to create impactful digital experiences that help businesses grow and succeed. Let's connect and bring your digital vision to life!</p>
                     <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>                   
                 </div>
             </div>
@@ -446,7 +445,7 @@
             </div>
         </div>  
         <div id="map">
-            <iframe src="https://snazzymaps.com/embed/61257"></iframe>
+            <iframe src="https://maps.app.goo.gl/NSJeWpcADoBSh2yr7"></iframe>
         </div>      
     </section>
     <!-- End of Contact Section -->
