--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#testmonial">Testmonial</a>
+                        <a class="nav-link" href="#testmonial">Testimonial</a>
                     </li>
                     <li class="nav-item">
                         <a class="- btn btn-primary rounded ml-4" href="#contact">Contact Me</a>
