--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             </div>
         </div>  
         <div id="map">
-            <iframe src="https://maps.app.goo.gl/NSJeWpcADoBSh2yr7"></iframe>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125532.916909998!2d122.87199132833227!3d10.508254464656408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33aec62a32f91fe9%3A0xc2719ecef3d4f59d!2sBago%20City%2C%20Negros%20Occidental!5e0!3m2!1sen!2sph!4v1721384638485!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>      
     </section>
     <!-- End of Contact Section -->
