--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
         <!-- Header-widget -->
         <div class="widget">
             <div class="widget-item">
-                <h2>124</h2>
-                <p>Happy Clients</p>
+                <h2>50+</h2>
+                <p>Sites Created</p>
             </div>
             <div class="widget-item">
-                <h2>456</h2>
-                <p>Project Completed</p>
+                <h2>100+</h2>
+                <p>Satisfied Clients</p>
             </div>
             <div class="widget-item">
-                <h2>789</h2>
-                <p>Awards Won</p>
+                <h2>100+</h2>
+                <p>Projects Completed</p>
             </div>
         </div>
     </header>
@@ -109,8 +109,8 @@
     <section id="service" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Service</h6>
-            <h6 class="section-title mb-4">What I Do</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <h6 class="section-title mb-4">Here's what I can do to help</h6>
+            <p class="mb-5 pb-4">I specialize in creating custom WordPress websites tailored to your unique needs.</br> From design to development, I ensure every project is completed with precision and excellence. </p>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
