--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>              
             <div class="img-holder">
-                <img src="assets/imgs/person.png" alt="">
+                <img src="assets/imgs/person.webp" alt="">
             </div>      
         </div>  
 
