--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
         <div class="container text-center">
             <h6 class="subtitle">Service</h6>
             <h6 class="section-title mb-4">Here's what I can do to help</h6>
-            <p class="mb-5 pb-4">I specialize in creating custom WordPress websites tailored to your unique needs.</br> From design to development, I ensure every project is completed with precision and excellence. </p>
+            
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-crown"></i>
-                            <h5>UI/UX Design</h5>
+                            <h5>HTML/CSS</h5>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-desktop"></i>
-                            <h5>Web Design</h5>
+                            <h5>Email Automation</h5>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-mobile"></i>
-                            <h5>App Design</h5>
+                            <h5>Responsive Website</h5>
                         </div>
                     </div>
                 </div>
@@ -142,6 +142,40 @@
                         <div class="card-body">
                             <i class="icon ti-bar-chart"></i>
                             <h5>SEO</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-crown"></i>
+                            <h5>Site Optimization</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-desktop"></i>
+                            <h5>Site Maintenance</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-mobile"></i>
+                            <h5>App Integrations</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-bar-chart"></i>
+                            <h5>WordPress Site Build</h5>
                         </div>
                     </div>
                 </div>
