--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Service</h6>
             <h6 class="section-title mb-4">Here's what I can do to help</h6>
-            
+            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
