--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Service</h6>
             <h6 class="section-title mb-4">Here's what I can do to help</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">Expert Solutions to Elevate Your Online Presence</p>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
@@ -189,7 +189,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Skills</h6>
             <h6 class="section-title mb-4">Why Choose me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">Your Trusted Partner for Quality Web Development and Design</p>
 
             <div class="row text-left">
                 <div class="col-sm-6">
@@ -306,7 +306,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Testmonial</h6>
             <h6 class="section-title mb-4">What People Say About Me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">Explore some of the projects I’ve worked on to see my <br>expertise in action and get inspired by my previous work.</p>
 
 
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -417,7 +417,7 @@
                     <div class="row align-items-center">
                         <div class="col-sm-9 text-center text-sm-left">
                             <h5 class="mt-3">Hire Me For Your Project</h5>
-                            <p class="mb-3">Accusantium labore nostrum similique quisquam.</p>
+                            <p class="mb-3">Looking to elevate your online presence?<br> Let’s collaborate and make your digital vision a reality.</p>
                         </div>
                         <div class="col-sm-3 text-center text-sm-right">
                             <button class="btn btn-light rounded">Hire Me!</button>
@@ -489,7 +489,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-sm-6">
-                    <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy; </p>
+                    <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy;Keeper John Britania </p>
                 </div>
                 <div class="col-sm-6">
                     <div class="socials">
