--- a/index.html
+++ b/index.html
@@ -111,12 +111,11 @@
             <h6 class="subtitle">Service</h6>
             <h6 class="section-title mb-4">Here's what I can do to help</h6>
             <p class="mb-5 pb-4">Expert Solutions to Elevate Your Online Presence</p>
-
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-crown"></i>
+                            <i class="icon ti-html5"></i> <!-- Updated icon for HTML/CSS -->
                             <h5>HTML/CSS</h5>
                         </div>
                     </div>
@@ -124,7 +123,7 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-desktop"></i>
+                            <i class="icon ti-email"></i> <!-- Updated icon for Email Automation -->
                             <h5>Email Automation</h5>
                         </div>
                     </div>
@@ -132,7 +131,7 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-mobile"></i>
+                            <i class="icon ti-mobile"></i> <!-- Updated icon for Responsive Website -->
                             <h5>Responsive Website</h5>
                         </div>
                     </div>
@@ -140,7 +139,7 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-bar-chart"></i>
+                            <i class="icon ti-bar-chart-alt"></i> <!-- Updated icon for SEO -->
                             <h5>SEO</h5>
                         </div>
                     </div>
@@ -150,7 +149,7 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-crown"></i>
+                            <i class="icon ti-settings"></i> <!-- Updated icon for Site Optimization -->
                             <h5>Site Optimization</h5>
                         </div>
                     </div>
@@ -158,7 +157,7 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-desktop"></i>
+                            <i class="icon ti-support"></i> <!-- Updated icon for Site Maintenance -->
                             <h5>Site Maintenance</h5>
                         </div>
                     </div>
@@ -166,7 +165,7 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-mobile"></i>
+                            <i class="icon ti-plug"></i> <!-- Updated icon for App Integrations -->
                             <h5>App Integrations</h5>
                         </div>
                     </div>
@@ -174,12 +173,13 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-bar-chart"></i>
+                            <i class="icon ti-wordpress"></i> <!-- Updated icon for WordPress Site Build -->
                             <h5>WordPress Site Build</h5>
                         </div>
                     </div>
                 </div>
             </div>
+            
         </div>
     </section>
     <!-- End of Sectoin -->
