--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-sm-6">
-                    <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy;Keeper John Britania </p>
+                    <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com" target="_blank">DevCRUD</a></p>
                 </div>
                 <div class="col-sm-6">
                     <div class="socials">
