--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="#testmonial">Testimonial</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary rounded ml-4" href="#contact">Contact Me</a>
+                        <a class=" btn btn-primary rounded ml-4" href="#contact">Contact Me</a>
                     </li>
                 </ul>
             </div>
