--- a/index.html
+++ b/index.html
@@ -260,68 +260,113 @@
                         <img src="assets/imgs/folio-1.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            </div>  
+                                <h5>Copy Ninjas</h5>
+                                <a href="javascript:void(0)" class="open-modal" data-modal="modal1"><i class="ti-zoom-in"></i></a>
+                                <a href="https://copyninjas.io/"><i class="ti-link"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="img-wrapper">
                         <img src="assets/imgs/folio-2.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            </div>                              
+                                <h5>Digital Solopreneur</h5>
+                                <a href="javascript:void(0)" class="open-modal" data-modal="modal2"><i class="ti-zoom-in"></i></a>
+                                <a href="https://digitalsolopreneur.com/"><i class="ti-link"></i></a>
+                            </div>
                         </div>
-                    </div>                  
+                    </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper">
                         <img src="assets/imgs/folio-3.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            </div>  
+                                <h5>Culleys</h5>
+                                <a href="javascript:void(0)" class="open-modal" data-modal="modal3"><i class="ti-zoom-in"></i></a>
+                                <a href="https://culleys.co.nz/"><i class="ti-link"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="img-wrapper">
                         <img src="assets/imgs/folio-4.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            </div>                              
+                                <h5>Hire Engage</h5>
+                                <a href="javascript:void(0)" class="open-modal" data-modal="modal4"><i class="ti-zoom-in"></i></a>
+                                <a href="https://hireengage.com/"><i class="ti-link"></i></a>
+                            </div>
                         </div>
-                    </div>                  
+                    </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper">
                         <img src="assets/imgs/folio-5.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            </div>  
+                                <h5>Inbox Society</h5>
+                                <a href="javascript:void(0)" class="open-modal" data-modal="modal5"><i class="ti-zoom-in"></i></a>
+                                <a href="https://www.inboxsociety.com/"><i class="ti-link"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="img-wrapper">
                         <img src="assets/imgs/folio-6.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            </div>                              
+                                <h5>Joons Solutions</h5>
+                                <a href="javascript:void(0)" class="open-modal" data-modal="modal6"><i class="ti-zoom-in"></i></a>
+                                <a href="https://joonsolutions.com/"><i class="ti-link"></i></a>
+                            </div>
                         </div>
-                    </div>                  
+                    </div>
                 </div>
             </div>
+
+            <!-- Modal Structures -->
+            <div id="modal1" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Copy Ninjas</h2>
+                    <p>This is a detailed description about Copy Ninjas.</p>
+                </div>
+            </div>
+            <div id="modal2" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Digital Solopreneur</h2>
+                    <p>This is a detailed description about Digital Solopreneur.</p>
+                </div>
+            </div>
+            <div id="modal3" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Culleys</h2>
+                    <p>This is a detailed description about Culleys.</p>
+                </div>
+            </div>
+            <div id="modal4" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Hire Engage</h2>
+                    <p>This is a detailed description about Hire Engage.</p>
+                </div>
+            </div>
+            <div id="modal5" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Inbox Society</h2>
+                    <p>This is a detailed description about Inbox Society.</p>
+                </div>
+            </div>
+            <div id="modal6" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Joons Solutions</h2>
+                    <p>This is a detailed description about Joons Solutions.</p>
+                </div>
+            </div>
+
 
         </div>
     </section>
