--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Portfolio</h6>
             <h6 class="section-title mb-4">Check My Wonderful Works</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">Here are some of the amazing projects I've worked on,<br> showcasing my skills in web development and design.</p>
 
             <div class="row">
                 <div class="col-sm-4">
@@ -262,7 +262,7 @@
                             <div class="overlay-infos">
                                 <h5>Copy Ninjas</h5>
                                 <a href="javascript:void(0)" class="open-modal" data-modal="modal1"><i class="ti-zoom-in"></i></a>
-                                <a href="https://copyninjas.io/"><i class="ti-link"></i></a>
+                                <a href="https://copyninjas.io/" target="_blank"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -272,7 +272,7 @@
                             <div class="overlay-infos">
                                 <h5>Digital Solopreneur</h5>
                                 <a href="javascript:void(0)" class="open-modal" data-modal="modal2"><i class="ti-zoom-in"></i></a>
-                                <a href="https://digitalsolopreneur.com/"><i class="ti-link"></i></a>
+                                <a href="https://digitalsolopreneur.com/" target="_blank"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -284,7 +284,7 @@
                             <div class="overlay-infos">
                                 <h5>Culleys</h5>
                                 <a href="javascript:void(0)" class="open-modal" data-modal="modal3"><i class="ti-zoom-in"></i></a>
-                                <a href="https://culleys.co.nz/"><i class="ti-link"></i></a>
+                                <a href="https://culleys.co.nz/" target="_blank"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -294,7 +294,7 @@
                             <div class="overlay-infos">
                                 <h5>Hire Engage</h5>
                                 <a href="javascript:void(0)" class="open-modal" data-modal="modal4"><i class="ti-zoom-in"></i></a>
-                                <a href="https://hireengage.com/"><i class="ti-link"></i></a>
+                                <a href="https://hireengage.com/" target="_blank"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -306,7 +306,7 @@
                             <div class="overlay-infos">
                                 <h5>Inbox Society</h5>
                                 <a href="javascript:void(0)" class="open-modal" data-modal="modal5"><i class="ti-zoom-in"></i></a>
-                                <a href="https://www.inboxsociety.com/"><i class="ti-link"></i></a>
+                                <a href="https://www.inboxsociety.com/" target="_blank"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -316,7 +316,7 @@
                             <div class="overlay-infos">
                                 <h5>Joons Solutions</h5>
                                 <a href="javascript:void(0)" class="open-modal" data-modal="modal6"><i class="ti-zoom-in"></i></a>
-                                <a href="https://joonsolutions.com/"><i class="ti-link"></i></a>
+                                <a href="https://joonsolutions.com/" target="_blank"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
