--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div class="container text-center">
         <h6 class="subtitle">Skills</h6>
         <h6 class="section-title mb-4">Why Choose Me</h6>
-        <p class="mb-5 pb-4">Your Trusted Partner for Quality Web Development and Design</p>
+        <p class="mb-5 pb-4">Your Trusted Partner for Quality Web Development and Email Automation</p>
 
         <div class="row text-left">
             <div class="col-sm-6">
@@ -200,51 +200,52 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <h6 class="mb-3">Email Automation</h6>
+                <h6 class="mb-3">JavaScript</h6>
                 <div class="progress">
                     <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <h6 class="mb-3">Responsive Website</h6>
+                <h6 class="mb-3">Responsive Web Design</h6>
                 <div class="progress">
                     <div class="progress-bar bg-primary" role="progressbar" style="width: 88%;" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"><span>88%</span></div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <h6 class="mb-3">SEO</h6>
+                <h6 class="mb-3">SEO Optimization</h6>
                 <div class="progress">
                     <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <h6 class="mb-3">Site Optimization</h6>
+                <h6 class="mb-3">WordPress Development</h6>
                 <div class="progress">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 87%;" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"><span>87%</span></div>
+                    <div class="progress-bar bg-primary" role="progressbar" style="width: 91%;" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100"><span>91%</span></div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <h6 class="mb-3">Site Maintenance</h6>
-                <div class="progress">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <h6 class="mb-3">App Integrations</h6>
+                <h6 class="mb-3">PHP/MySQL</h6>
                 <div class="progress">
                     <div class="progress-bar bg-primary" role="progressbar" style="width: 84%;" aria-valuenow="84" aria-valuemin="0" aria-valuemax="100"><span>84%</span></div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <h6 class="mb-3">WordPress Site Build</h6>
+                <h6 class="mb-3">API Integration</h6>
                 <div class="progress">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 91%;" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100"><span>91%</span></div>
+                    <div class="progress-bar bg-primary" role="progressbar" style="width: 87%;" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"><span>87%</span></div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <h6 class="mb-3">Email Automation</h6>
+                <div class="progress">
+                    <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
                 </div>
             </div>
         </div>
     </div>
 </section>
 <!-- End of Skills section -->
+
 
 
     <!-- Portfolio section -->
