--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <h6 class="mb-3">Shopify Integration</h6>
+                <h6 class="mb-3">Shopify Development</h6>
                 <div class="progress">
                     <div class="progress-bar bg-primary" role="progressbar" style="width: 87%;" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"><span>87%</span></div>
                 </div>
