--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
                         <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-1.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum voluptates in enim vel amet?</p>
-                                <h1 class="title">Emma Re</h1>
-                                <h1 class="subtitle">Graphic Designer</h1>
+                                <p>Working with Keeper John Britania has been a game-changer for our business. His expertise in web development and email automation transformed our online presence and streamlined our communication processes. The new website he developed for us is not only visually stunning but also incredibly functional. Highly recommended!</p>
+                                <h1 class="title">Renee Ngo</h1>
+                                <h1 class="subtitle">COO, Digital Soloprenuer</h1>
                             </div>
                         </div>
                     </div>
@@ -400,9 +400,9 @@
                         <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-2.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum voluptates in enim vel amet?</p>
-                                <h1 class="title">James Bert</h1>
-                                <h1 class="subtitle">Web Designer</h1>
+                                <p>Keeper John Britania is a true professional in the field of web development and email automation. His attention to detail and innovative solutions have greatly enhanced our marketing efforts and website functionality. We've seen a noticeable increase in engagement and conversions thanks to his work. We couldn't be happier with the results!</p>
+                                <h1 class="title">Krishelle Balboa</h1>
+                                <h1 class="subtitle">Project Manager/Web Developer, Glass Elephant</h1>
                             </div>
                         </div>
                     </div>
@@ -410,9 +410,9 @@
                         <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-3.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum voluptates in enim vel amet?</p>
-                                <h1 class="title">Michael Abra</h1>
-                                <h1 class="subtitle">Web Developer</h1>
+                                <p>If you're looking for a web developer who knows how to integrate seamless email automation, Keeper John Britania is your go-to expert. His technical skills and creative approach helped us achieve our goals with ease. The end result exceeded our expectations and has had a positive impact on our business operations.</p>
+                                <h1 class="title">Christine Villacorta</h1>
+                                <h1 class="subtitle">Graphics Manager, Twlv20</h1>
                             </div>
                         </div>
                     </div>
