--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 </div>      
 
                 <div class="socials mt-4">
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-linkedin"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
+                    <a class="social-item" href="https://web.facebook.com/keepsbritania/" target="_blank"><i class="ti-facebook"></i></a>
+                    <a class="social-item" href="https://www.linkedin.com/in/keeper-john-britania-327765195/" target="_blank"><i class="ti-linkedin"></i></a>
+                    <a class="social-item" href="https://github.com/KeepsBritania/" target="_blank"><i class="ti-github"></i></a>
                 </div>
             </div>              
             <div class="img-holder">
@@ -564,9 +564,9 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="socials">
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-linkedin"></i></a>
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
+                        <a class="social-item" href="https://web.facebook.com/keepsbritania/" target="_blank"><i class="ti-facebook"></i></a>
+                    <a class="social-item" href="https://www.linkedin.com/in/keeper-john-britania-327765195/" target="_blank"><i class="ti-linkedin"></i></a>
+                    <a class="social-item" href="https://github.com/KeepsBritania/" target="_blank"><i class="ti-github"></i></a>
                     </div>
                 </div>
             </div>
