--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <p>Web Developer/Automation Hero</p>
 
                 <div class="buttons pt-3">
-                    <button class="btn btn-primary rounded">HIRE ME</button>
-                    <button class="btn btn-dark rounded">DOWNLOAD CV</button>
+                    <button class="btn btn-primary rounded"><a href="#contact">HIRE ME</a></button>
+                    <button class="btn btn-dark rounded"><a href="assets/KEEPERJOHN_BRITANIA_RESUME.pdf" target="_blank">DOWNLOAD CV</a></button>
                 </div>      
 
                 <div class="socials mt-4">
@@ -491,7 +491,7 @@
                             <p class="mb-3">Looking to elevate your online presence?<br> Let’s collaborate and make your digital vision a reality.</p>
                         </div>
                         <div class="col-sm-3 text-center text-sm-right">
-                            <button class="btn btn-light rounded">Hire Me!</button>
+                            <button class="btn btn-light rounded"><a href="https://www.onlinejobs.ph/jobseekers/info/865545" target="_blank">Hire Me!</a></button>
                         </div>
                     </div>
                 </div> 
