--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <p>Web Developer/Automation Hero</p>
 
                 <div class="buttons pt-3">
-                    <a href="#contact"></a><button class="btn btn-primary rounded">HIRE ME</button></a>
-                    <a href="assets/KEEPERJOHN_BRITANIA_RESUME.pdf" target="_blank"></a><button class="btn btn-dark rounded">DOWNLOAD CV</button></a>
+                    <a href="#contact"><button class="btn btn-primary rounded">HIRE ME</button></a>
+                    <a href="assets/KEEPERJOHN_BRITANIA_RESUME.pdf" target="_blank"><button class="btn btn-dark rounded">DOWNLOAD CV</button></a>
                 </div>      
 
                 <div class="socials mt-4">
@@ -99,7 +99,7 @@
                     <p class="subtitle">Web Developer/Automation Hero</p>
                     <p>Hello! I'm Keeper John Britania, a passionate and experienced web developer specializing in CMS development. Since 2018, I've been honing my skills in creating and managing websites using various Content Management Systems (CMS) including WordPress, HubSpot, ClickFunnels, GoHighLevel, and Shopify. With a strong foundation in web development, I have a proven track record of delivering high-quality, functional, and visually appealing websites that cater to the unique needs of my clients. My expertise extends beyond just building websites; I excel in email automation, ensuring seamless and efficient communication for businesses.</p>
                     <p>One of the aspects I love most about my job is the ability to work remotely. Equipped with my trusty laptop, I have the freedom to work from anywhere, providing my clients with flexibility and timely solutions. I am passionate about what I do and continually strive to stay updated with the latest industry trends and technologies. My commitment to excellence and my love for web development drive me to create impactful digital experiences that help businesses grow and succeed. Let's connect and bring your digital vision to life!</p>
-                    <a href="assets/KEEPERJOHN_BRITANIA_RESUME.pdf" target="_blank"></a><button class="btn btn-dark rounded">DOWNLOAD CV</button></a>               
+                    <a href="assets/KEEPERJOHN_BRITANIA_RESUME.pdf" target="_blank"><button class="btn btn-dark rounded">DOWNLOAD CV</button></a>         
                 </div>
             </div>
         </div>
