--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <p>Web Developer/Automation Hero</p>
 
                 <div class="buttons pt-3">
-                    <a href="#contact"><button class="nav-link-btn btn btn-primary rounded">HIRE ME</button></a>
+                    <a class="nav-link-btn " href="#contact"><button class="btn btn-primary rounded">HIRE ME</button></a>
                     <a href="assets/KEEPERJOHN_BRITANIA_RESUME.pdf" target="_blank"><button class="btn btn-dark rounded">DOWNLOAD CV</button></a>
                 </div>      
 
